--- a/tango/requirements.txt
+++ b/tango/requirements.txt
@@ -1,19 +1,29 @@
 alembic==1.3.3
+boto3==1.14.26
+botocore==1.17.26
+certifi==2020.6.20
+chardet==3.0.4
 Click==7.0
+docutils==0.15.2
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-Login==0.5.0
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.0
+jmespath==0.10.0
 Mako==1.1.1
 MarkupSafe==1.1.1
 psycopg2-binary==2.8.4
 python-dateutil==2.8.1
 python-editor==1.0.4
+requests==2.24.0
+s3transfer==0.3.3
 six==1.14.0
 SQLAlchemy==1.3.13
+urllib3==1.25.10
 Werkzeug==0.16.1
 WTForms==2.2.1
